--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js"
-  },
+    "start": "nodemon server.js"},
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
